[project]
name = "polymarket-log"
version = "0.1.0"
description = "Log and save real-time transactions in 15-minute windows for the given coin(s)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "asyncio>=4.0.0",
    "orjson>=3.11.5",
    "websockets>=16.0",
]
